--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,22 @@
--i https://pypi.org/simple
-alembic==1.5.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-certifi==2020.12.5
-click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-cloudinary==1.24.0
-flask==1.1.2
-flask-admin==1.5.7
-flask-cors==3.0.10
-flask-migrate==2.6.0
-flask-sqlalchemy==2.4.4
-flask-swagger==0.2.14
-gunicorn==20.0.4
-itsdangerous==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-jinja2==2.11.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-mako==1.1.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-markupsafe==1.1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-psycopg2-binary==2.8.6
-python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-python-dotenv==0.15.0
-python-editor==1.0.4
-pyyaml==5.4.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlalchemy==1.3.23
-urllib3==1.26.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
-werkzeug==1.0.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-wtforms==2.3.3
+autopep8==2.0.1
+certifi==2022.12.7
+charset-normalizer==3.0.1
+click==8.1.3
+colorama==0.4.6
+distlib==0.3.6
+filelock==3.9.0
+Flask==2.2.3
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+pipenv==2023.2.4
+platformdirs==3.0.0
+pycodestyle==2.10.0
+requests==2.28.2
+stripe==5.2.0
+tomli==2.0.1
+urllib3==1.26.14
+virtualenv==20.19.0
+virtualenv-clone==0.5.7
+Werkzeug==2.2.3
