--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,35 @@
-autopep8==2.0.1
+alembic==1.9.4
+bcrypt==4.0.1
 certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
+cloudinary==1.32.0
 colorama==0.4.6
-distlib==0.3.6
-filelock==3.9.0
 Flask==2.2.3
+Flask-Admin==1.6.1
+Flask-Bcrypt==1.0.1
+Flask-Cors==3.0.10
+Flask-JWT-Extended==4.4.4
+Flask-Migrate==4.0.4
+Flask-SQLAlchemy==3.0.3
+flask-swagger==0.2.14
+greenlet==2.0.2
+gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.2.4
 MarkupSafe==2.1.2
-pipenv==2023.2.4
-platformdirs==3.0.0
-pycodestyle==2.10.0
+names==0.3.0
+psycopg2-binary==2.9.5
+PyJWT==2.6.0
+python-dotenv==1.0.0
+PyYAML==6.0
 requests==2.28.2
+six==1.16.0
+SQLAlchemy==1.4.42
 stripe==5.2.0
-tomli==2.0.1
+typing_extensions==4.5.0
 urllib3==1.26.14
-virtualenv==20.19.0
-virtualenv-clone==0.5.7
 Werkzeug==2.2.3
+WTForms==3.0.1
