--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ flask_bcrypt = "*"
 flask_jwt_extended = "*"
 
 [dev-packages]
+autopep8 = "*"
 
 [requires]
 python_version = "3.10"
@@ -35,4 +36,3 @@ local="heroku local"
 upgrade="flask db upgrade"
 reset_db="bash ./docs/assets/reset_migrations.bash"
 deploy="echo 'Please follow this 3 steps to deploy: https://github.com/4GeeksAcademy/flask-rest-hello/blob/master/README.md#deploy-your-website-to-heroku' "
-
