--- a/Pipfile
+++ b/Pipfile
@@ -4,23 +4,42 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-requests = "*"
-stripe = "*"
-flask = "*"
+requests = "==2.28.2"
+stripe = "==5.2.0"
+flask = "==2.2.3"
 sqlalchemy = "==1.4.42"
-flask-sqlalchemy = "*"
-flask-migrate = "*"
-flask-swagger = "*"
-psycopg2-binary = "*"
-python-dotenv = "*"
-flask-cors = "*"
-gunicorn = "*"
-cloudinary = "*"
-flask-admin = "*"
-typing-extensions = "*"
-names = "*"
-flask_bcrypt = "*"
-flask_jwt_extended = "*"
+flask-sqlalchemy = "==3.0.3"
+flask-migrate = "==4.0.4"
+flask-swagger = "==0.2.14"
+psycopg2-binary = "==2.9.5"
+python-dotenv = "==1.0.0"
+flask-cors = "==3.0.10"
+gunicorn = "==20.1.0"
+cloudinary = "==1.32.0"
+flask-admin = "==1.6.1"
+typing-extensions = "==4.5.0"
+names = "==0.3.0"
+flask_bcrypt = "==1.0.1"
+flask_jwt_extended = "==4.4.4"
+sendgrid = "*"
+alembic = "==1.10.1"
+bcrypt = "==4.0.1"
+certifi = "==2022.12.7"
+charset-normalizer = "==3.1.0"
+click = "==8.1.3"
+colorama = "==0.4.6"
+greenlet = "==2.0.2"
+idna = "==3.4"
+itsdangerous = "==2.1.2"
+jinja2 = "==3.1.2"
+mako = "==1.2.4"
+markupsafe = "==2.1.2"
+pyjwt = "==2.6.0"
+pyyaml = "==6.0"
+six = "==1.16.0"
+urllib3 = "==1.26.14"
+werkzeug = "==2.2.3"
+wtforms = "==3.0.1"
 
 [dev-packages]
 autopep8 = "*"
