--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.10.1
+autopep8==2.0.2
 bcrypt==4.0.1
 certifi==2022.12.7
 charset-normalizer==3.1.0
@@ -22,13 +23,18 @@ Mako==1.2.4
 MarkupSafe==2.1.2
 names==0.3.0
 psycopg2-binary==2.9.5
+pycodestyle==2.10.0
 PyJWT==2.6.0
-python-dotenv==0.21.1
+python-dotenv==1.0.0
+python-http-client==3.3.7
 PyYAML==6.0
 requests==2.28.2
+sendgrid==6.10.0
 six==1.16.0
 SQLAlchemy==1.4.42
+starkbank-ecdsa==2.2.0
 stripe==5.2.0
+tomli==2.0.1
 typing_extensions==4.5.0
 urllib3==1.26.14
 Werkzeug==2.2.3
