--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ node_modules/
 dist/*
 !public/
 !public/*
+Dockerfile
 
 # ignore the dist directory were our bundle files are going to be
 !.gitkeep
